--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "dedent": "^1.7.0",
+    "highlight.js": "^11.11.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-code-blocks": "^0.1.6",
+    "react-dom": "^19.1.1",
+    "react-highlight": "^0.15.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
